node-rahul-mongo-microsvc/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ashu-mongo
  name: mongo-lb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: ashu-mongo
  type: ClusterIP
status:
  loadBalancer: {}
