node-rahul-mongo-microsvc/svcnode.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ui-app
  name: node-lb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3008
  selector:
    app: ui-app
  type: ClusterIP
status:
  loadBalancer: {}
